test/arrays/ferguson/semantic-examples/4-return-local-ref.good
4-return-local-ref.chpl:2: In function 'f':
4-return-local-ref.chpl:4: error: illegal expression to return by ref
